Fix mobile scrolling and improve typography
- Fix Services and Portfolio sections to enable proper mobile side-scrolling
- Reduce line spacing for 'What makes us unique' headline
- Remove 'Need more pages' line from pricing card
- Add line break between 'Real Businesses' and 'Real Results'
- Split footer copyright to separate lines for better readability

--- a/.env.local.example
+++ b/.env.local.example
@@ -6,8 +6,8 @@ STRIPE_SECRET_KEY=sk_test_xxxxxxxxxxxxx
 NEXT_PUBLIC_STRIPE_BUILD_PRICE_ID=price_xxxxxxxxxxxxx
 NEXT_PUBLIC_STRIPE_MAINTENANCE_PRICE_ID=price_xxxxxxxxxxxxx
 
-# Google Analytics 4
-NEXT_PUBLIC_GA4_MEASUREMENT_ID=G-KBP3LGE8ZQ
+# Google Analytics
+NEXT_PUBLIC_GA_MEASUREMENT_ID=G-XXXXXXXXXX
 
 # Site URL (for Stripe redirects)
 NEXT_PUBLIC_SITE_URL=https://trailheadmade.com
@@ -15,3 +15,7 @@ NEXT_PUBLIC_SITE_URL=https://trailheadmade.com
 # Email Service (Resend)
 RESEND_API_KEY=re_xxxxxxxxxxxxx
 RESEND_FROM_EMAIL=hello@trailheadmade.com
+RESEND_AUDIENCE_ID=ca06c919-fd36-452e-8416-e432a2a55296
+
+# Cron Job Security
+CRON_SECRET=your-random-secret-string-here
